Increase width of first column of table on inform gov page. Stops most benefit/payment titles from wrapping to two lines

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -172,5 +172,10 @@ img.upload-thumb {
 }
 
 .checklist-actions {
-    margin-top: 100px;
+  margin-top: 100px;
+}
+
+// Inform government page
+.check-your-answers td:first-child {
+  width: 33.334%;
 }
